--- a/client/src/stylesheets/components/_GuestWaitingRoom.scss
+++ b/client/src/stylesheets/components/_GuestWaitingRoom.scss
@@ -31,5 +31,8 @@ button.guestButton {
     margin: 1rem;
     margin-top: 2rem;
     padding: 1rem;
-    border: 1px solid black;
+    // border: 1px solid black;
+    background-color: #97c2c1;
+    color: white;
+    border-radius: 10px;
 }
